--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
     <script>
         // Sample HTML files data - in a real scenario, this would come from your server/API
         const htmlFiles = [
+            { name: "DAA NOTES", path: "DAA.html", url: "DAA.html" },
             { name: "DAA PAPER 1", path: "DAA_PAPER_1.html", url: "DAA_PAPER_1.html" },
             { name: "DAA PAPER 2", path: "DAA_PAPER_2.html", url: "DAA_PAPER_2.html" },
             { name: "R PAPER 1", path: "R_PAPER_1.html", url: "R_PAPER_1.html" },
